Font family edited

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
-@import url(https://fonts.google.com/specimen/Montserrat);
-@import url(https://fonts.google.com/specimen/Fraunces);
+@import url("https://fonts.google.com/specimen/Montserrat");
+@import url("https://fonts.google.com/specimen/Fraunces");
 
 * {
   margin: 0%;
